[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-remoterun"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0", features = ["std"], default-features = false }
async-trait = { version = "0.1", default-features = false }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
tracing = { workspace = true }
warpgate-common = { version = "*", path = "../warpgate-common", default-features = false }
